--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
@@ -30,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
- 
   "browserslist": {
     "production": [
       ">0.2%",
